--- a/WpfApp2/App.config
+++ b/WpfApp2/App.config
@@ -2,7 +2,7 @@
 <configuration>
 	<connectionStrings>
 		<add name="DefaultConnection"
-			 connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=MovieLibrary;Integrated Security=True"
+			 connectionString="Server=(localdb)\\mssqllocaldb;Database=MovieLibrary;Trusted_Connection=True;"
 			 providerName="System.Data.SqlClient"/>
 	</connectionStrings>
 </configuration>
