--- a/WpfApp2/App.config
+++ b/WpfApp2/App.config
@@ -2,7 +2,14 @@
 <configuration>
 	<connectionStrings>
 		<add name="DefaultConnection"
-			 connectionString="Server=(localdb)\\mssqllocaldb;Database=MovieLibrary;Trusted_Connection=True;"
+			 connectionString="Server=(localdb)\mssqllocaldb;Database=MovieLibrary;Trusted_Connection=True;"
 			 providerName="System.Data.SqlClient"/>
+		<add name="OutputXML"
+			 connectionString="output.xml"/>
+		<add name="OutputExcel"
+			 connectionString="output.xlsx"/>
 	</connectionStrings>
+	<appSettings>
+		<add key="NumberOfRecPerPage" value="10"/>
+	</appSettings>
 </configuration>
