--- a/WpfApp2/WpfApp2.csproj
+++ b/WpfApp2/WpfApp2.csproj
@@ -8,11 +8,41 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="MovieLibraryContext_1.cs" />
+    <Compile Remove="AbstractDataExport.cs" />
+    <Compile Remove="AbstractDataExportBridge.cs" />
+    <Compile Remove="Class1.cs" />
+    <Compile Remove="EnumerableExtensions.cs" />
+    <Compile Remove="Excluded\MovieLibrary.cs" />
+    <Compile Remove="Excluded\MovieLibraryContextFactory.cs" />
+    <Compile Remove="Excluded\MovieLibraryContextOld.cs" />
+    <Compile Remove="Excluded\MovieLibraryView.cs" />
+    <Compile Remove="Excluded\Producer.cs" />
+    <Compile Remove="Excluded\ProducerConfiguration.cs" />
+    <Compile Remove="Excluded\ProducerView.cs" />
+    <Compile Remove="MovieLibrary.cs" />
+    <Compile Remove="MovieLibraryContextFactory.cs" />
+    <Compile Remove="MovieLibraryContextOld.cs" />
+    <Compile Remove="MovieLibraryView.cs" />
+    <Compile Remove="MovieView.cs" />
+    <Compile Remove="PageInfo.cs" />
+    <Compile Remove="PageView.cs" />
+    <Compile Remove="PagingRepository.cs" />
+    <Compile Remove="Producer.cs" />
+    <Compile Remove="ProducerConfiguration.cs" />
+    <Compile Remove="ProducerView.cs" />
+    <Compile Remove="Window1.xaml.cs" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="linq2db" Version="4.1.0" />
+    <None Remove="XMLFile1.xml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Page Remove="Window1.xaml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="LinqKit.Microsoft.EntityFrameworkCore" Version="6.1.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.6">
       <PrivateAssets>all</PrivateAssets>
@@ -23,6 +53,12 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="NPOI" Version="2.5.6" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Excluded\" />
   </ItemGroup>
 
 </Project>
