--- a/WpfApp2/App.config
+++ b/WpfApp2/App.config
@@ -10,6 +10,13 @@
 			 connectionString="output.xlsx"/>
 	</connectionStrings>
 	<appSettings>
+		<!-- Pagging settings -->
 		<add key="NumberOfRecPerPage" value="10"/>
+		<!-- XML file settings -->
+		<add key="RootNodeNameXML"        value="TestProgram"/>
+		<add key="ParentNodeNameXML"	  value="Record"/>
+		<add key="ParentAttributeNameXML" value="id"/>
+		<add key="ProducerName"           value="FirstName"/>
+		<add key="ProducerSurname"        value="LastName"/>
 	</appSettings>
 </configuration>
