--- a/WpfApp2/WpfApp2.csproj
+++ b/WpfApp2/WpfApp2.csproj
@@ -10,15 +10,7 @@
   <ItemGroup>
     <Compile Remove="AbstractDataExport.cs" />
     <Compile Remove="AbstractDataExportBridge.cs" />
-    <Compile Remove="Class1.cs" />
     <Compile Remove="EnumerableExtensions.cs" />
-    <Compile Remove="Excluded\MovieLibrary.cs" />
-    <Compile Remove="Excluded\MovieLibraryContextFactory.cs" />
-    <Compile Remove="Excluded\MovieLibraryContextOld.cs" />
-    <Compile Remove="Excluded\MovieLibraryView.cs" />
-    <Compile Remove="Excluded\Producer.cs" />
-    <Compile Remove="Excluded\ProducerConfiguration.cs" />
-    <Compile Remove="Excluded\ProducerView.cs" />
     <Compile Remove="MovieLibrary.cs" />
     <Compile Remove="MovieLibraryContextFactory.cs" />
     <Compile Remove="MovieLibraryContextOld.cs" />
@@ -42,7 +34,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="LinqKit.Microsoft.EntityFrameworkCore" Version="6.1.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.6">
       <PrivateAssets>all</PrivateAssets>
@@ -53,12 +44,9 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
     <PackageReference Include="NPOI" Version="2.5.6" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Excluded\" />
   </ItemGroup>
 
 </Project>
